--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
-h1 {
-  color: green;
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(5, 5, 66);
+}
+
+#song-card {
+  width: 300px;
+  height: 350px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  /*top because I used position relative; Could have used margin top without the position*/
+  top: 25vh;
+}
+
+#song-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 12px;
 }
