--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: rgb(5, 5, 66);
+  background-color: rgb(203 203 217);
 }
 
 #song-card {
@@ -12,11 +12,52 @@ body {
   position: relative;
   /*top because I used position relative; Could have used margin top without the position*/
   top: 25vh;
+  border-radius: 12px;
+  overflow: hidden;
+  transition: box-shadow 0.3s;
+}
+
+#song-card:hover {
+  box-shadow: 0 10px 50px rgba(0, 0, 0, 0.55);
 }
 
 #song-card img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 12px;
+}
+
+#song-card-overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.5) 0%,
+    rgba(0, 0, 0, 0) 40%
+  );
+}
+
+#song-card-info {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: white;
+  text-align: center;
+}
+
+#song-card-info-artist {
+  font-weight: bold;
+}
+
+#song-card-info-album {
+  font-size: 0.8em;
+}
+
+#song-card-info-title {
+  font-size: 1.5em;
+  margin-top: 8px;
 }
