--- a/style.css
+++ b/style.css
@@ -47,6 +47,11 @@ body {
   right: 0;
   color: white;
   text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  user-select: none;
+  transition: transform 1s, opacity 1.5s;
 }
 
 #song-card-info-artist {
@@ -60,4 +65,43 @@ body {
 #song-card-info-title {
   font-size: 1.5em;
   margin-top: 8px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+#song-card:hover #song-card-info {
+  transform: translateX(100%);
+  opacity: 0;
+}
+
+#song-card-play-button {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  background-color: green;
+  bottom: 20px;
+  left: 20px;
+  border-radius: 50%;
+  cursor: pointer;
+  transform: translateX(-100px);
+  transition: transform 0.3s;
+}
+
+#song-card:hover #song-card-play-button {
+  transform: translateX(0px);
+}
+
+#triangle {
+  position: absolute;
+  top: 0px;
+  bottom: 0;
+  left: 0px;
+  right: 0;
+  width: 0;
+  height: 0;
+  margin: auto;
+  border-style: solid;
+  border-width: 7px 0 7px 10px;
+  border-color: transparent transparent transparent white;
 }
